# CnC_Generals_Rust

./: .events.jsonl  .gitignore  AGENTS.md  AI_PARITY_ANALYSIS.md  AUDIO_SYSTEM_IMPLEMENTATION.md  CLAUDE.md  GameEngineDevice_Parity_Report.md  INIT_COMPARISON.txt  INI_PARITY_REPORT.md  PARITY_REPORT.md  PLAYABILITY_CURRENT_STATE.md  PORT_FILE_MATRIX.txt  PORT_FILE_MISMATCHES_BY_SUBSYSTEM.txt  PORT_MISSING_FILES_BY_SUBSYSTEM.txt  PORT_STATE.txt  PORT_SUBSYSTEM_STATUS.json  SPECIAL_POWER_ACTIONS_IMPLEMENTATION.md  SPECIAL_POWER_IMPLEMENTATION_COMPLETE.md  STUB_BACKLOG_RUNTIME.txt  STUB_PORTING_PLAN.md  TEAM_PARITY_ANALYSIS.md  WATER_RENDERING_IMPLEMENTATION.md  analyze_coverage.py  analyze_init_parity.py  analyze_pairs.py  analyze_parity.py  check_globals.py  check_rust_singletons.py  check_send  compare_files.py  coverage_analysis.txt  cpp_behavior.txt  cpp_update.txt  critical_init_mapping.json  detailed_analysis.py  extract_findings.py  file_mapping.json  files.jsonl  find_accessors.py  find_singletons2.py  (+15 more)
GeneralsRust/: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  OWNERSHIP_AND_AUTHORITY.md  check_output.txt  libaction_manager.rlib  test_debug_tools.rs  verify_sizes.rs
GeneralsRust/.cargo/: config.toml
GeneralsRust/.claude/state/: current_mode.json
GeneralsRust/.claude/state/context-gathering/: current_transcript_001.json  current_transcript_002.json
GeneralsRust/.claude/state/general-purpose/: current_transcript_002.json  current_transcript_003.json  current_transcript_008.json  current_transcript_009.json
GeneralsRust/.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  ci.yml
GeneralsRust/Code/Benchmarks/: Cargo.toml
GeneralsRust/Code/Benchmarks/src/: benchmark_runner.rs  main.rs
GeneralsRust/Code/Examples/: Cargo.toml
GeneralsRust/Code/Examples/src/: simple_game.rs
GeneralsRust/Code/Experimental/editor_gpui/: Cargo.toml
GeneralsRust/Code/Experimental/engine_core/: Cargo.toml
GeneralsRust/Code/Experimental/game_runtime/: Cargo.toml
GeneralsRust/Code/GameEngine/: libdiplomacy.rlib  libin_game_chat.rlib  libin_game_ui_messages.rlib  libmessage_stream.rlib  libonline_chat.rlib  libteam.rlib  libthing_template.rlib
GeneralsRust/Code/GameEngine/Common/: Cargo.toml  check_output.txt
GeneralsRust/Code/GameEngine/GameClient/: Cargo.toml  HotKey.rs  libdrawable.rlib  libreplay_controls.rlib  libreplay_menu.rlib
GeneralsRust/Code/GameEngine/GameEngineDevice/: Cargo.toml  build.rs
GeneralsRust/Code/GameEngine/GameLogic/: Cargo.toml  errors.txt  gamelogic_check_output.txt  gamelogic_check_output_2.txt  gamelogic_check_output_3.txt  gamelogic_check_output_4.txt  gamelogic_check_output_5.txt  gamelogic_check_output_6.txt  gamelogic_check_output_7.txt  gamelogic_check_output_8.txt  libmap_loader.rlib  test_write.rs
GeneralsRust/Code/GameEngine/GameNetwork/: AUDIT_COMPLETE.txt  CRITICAL_ISSUES_SUMMARY.txt  Cargo.toml  MATCHMAKING_IMPLEMENTATION.md  TEST_FAILURE_QUICK_SUMMARY.txt  test.err
GeneralsRust/Code/GameEngine/Precompiled/: PreRTS.rs
GeneralsRust/Code/GameEngineDevice/: Cargo.toml
GeneralsRust/Code/GameEngineDevice/src/: lib.rs
GeneralsRust/Code/Integration/: Cargo.toml
GeneralsRust/Code/Integration/examples/: telemetry_overlay.rs
GeneralsRust/Code/Integration/src/: diagnostics.rs  engine_coordinator.rs  event_system.rs  lib.rs  performance_manager.rs  resource_manager.rs
GeneralsRust/Code/Libraries/Source/: Cargo.toml
GeneralsRust/Code/Libraries/WW3D/: Cargo.toml
GeneralsRust/Code/Main/: Cargo.toml  GPUI_INTEGRATION.md  GPUI_INTEGRATION_SUMMARY.md  PLAYABILITY_ARCHITECTURE_REFACTOR_PLAN.md  PLAYABILITY_PLAN.md  build.rs  game_config.toml  playability_gate.sh  resource.rs  test_textures.sh  test_w3d.sh  w3d_explorer.rs
GeneralsRust/Code/Main/assets/: AudioEnglishZH.big  EnglishZH.big  INIZH.big  MapsZH.big  Music.big  PatchZH.big  TexturesZH.big  W3DEnglishZH.big  W3DZH.big
GeneralsRust/Code/Main/crashes/: crash_1771129629.txt  crash_1771133104.txt  crash_1771365512.txt  crash_1775323837.txt  crash_1775344327.txt  crash_1776190033.txt  crash_1776190037.txt  crash_1783722980.txt
GeneralsRust/Code/Main/examples/: telemetry_bridge.rs  test_egui_integration.rs  test_texture_loading.rs
GeneralsRust/Code/Main/scripts/: generate_port_tracking.py  verify_ini_dump_parity.py
GeneralsRust/Code/Main/shaders/: basic.wgsl  ui.wgsl
GeneralsRust/Code/Main/src/: ai.rs  ai_decisions.rs  ai_skirmish.rs  ai_skirmish_activity.rs  authoritative_world.rs  authority_bridge.rs  breadth_scenarios.rs  cnc_game_engine.rs  command_executor.rs  command_integration.rs  command_line.rs  command_system.rs  copy_protection.rs  core.rs  debug_system.rs  deterministic_trace.rs  engine_factory.rs  executable_smoke.rs  fow_rendering.rs  game_engine.rs  game_results_queue.rs  gameplay_layout.rs  gameworld_shadow.rs  golden_campaign.rs  golden_skirmish.rs  input_integration.rs  input_system.rs  input_system_simple.rs  input_test.rs  integration_bridge.rs  interpolation.rs  interpolation_test.rs  lib.rs  localization.rs  main.rs  map_frame_scenario.rs  minimap_fow_integration.rs  network.rs  playability_integration.rs  presentation_frame.rs  (+16 more)
GeneralsRust/Code/Main/tests/: crc_validation_test.rs  deterministic_frame_trace_tests.rs  playable_smoke_tests.rs  save_load_tests.rs  simple_crc_test.rs  (+1 more)
GeneralsRust/Code/Tools/: Cargo.toml
GeneralsRust/Code/scripts/: prefix_slice_0.txt  prefix_slice_1.txt  prefix_slice_2.txt  prefix_slice_3.txt
GeneralsRust/UserData/: Options.ini
GeneralsRust/tests/: integration_ai_statemachine.rs  integration_audio.rs  integration_game_initialization.rs  integration_ini_loading.rs  integration_network_serialization.rs  integration_object_lifecycle.rs  integration_pathfinding.rs  integration_save_load.rs  integration_ui_rendering.rs  integration_weapon_damage.rs
GeneralsRust/tools/module-mask-gen/: Cargo.toml
GeneralsRust/validation/: Cargo.toml
GeneralsRust/validation/baselines/: ww3d_smoke.json
GeneralsRust/validation/src/: lib.rs
GeneralsRust/validation/tests/: ww3d_smoke.rs
(+14523 files in other folders)
