[package]
name = "ww3d-validation"
version = "0.1.0"
edition = "2021"

[lib]
name = "ww3d_validation"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glam = "0.28"
ww3d-assets = { path = "../Code/Libraries/Source/WWVegas/WW3D2/crates/ww3d-assets" }
ww3d-geometry = { path = "../Code/Libraries/Source/WWVegas/WW3D2/crates/ww3d-geometry" }
