[package]
name = "game_engine_device"
version = "0.1.0"
edition = "2021"
description = "Command & Conquer Generals Zero Hour W3D Graphics Engine Device"
license = "GPL-3.0"
authors = ["Claude Code"]

[lib]
name = "game_engine_device"
path = "src/lib.rs"

[dependencies]
# Modern Graphics API abstraction - cross-platform GPU access
wgpu = "27.0.1"                           # Modern graphics API abstraction
winit = "0.29"                          # Cross-platform window creation

# Mathematics for 3D graphics
cgmath = { version = "0.18", features = ["serde"] }    # Linear algebra and 3D math
ultraviolet = "0.9"                     # SIMD-optimized 3D math

# Vertex buffer and GPU memory management
bytemuck = { version = "1.14", features = ["derive"] } # Safe transmutation for vertex data
wgpu-hal = "27.0.4"                       # Lower-level GPU access
raw-window-handle = "0.5"               # Platform window handles

# Image and texture processing
image = { version = "0.24", features = ["png", "jpeg", "tga", "bmp"] }
ktx2 = "0.3"                           # Compressed texture format support

# Shader compilation and management
naga = { version = "0.19", features = ["wgsl-in", "wgsl-out", "glsl-in", "hlsl-out"] }
wgsl_to_wgpu = "27.0.1"                  # WGSL shader compilation

# Model loading and animation
gltf = { version = "1.4", features = ["utils"] }       # glTF 2.0 model loading
russimp = "2.0"                        # Assimp binding for various model formats

# Memory and performance optimization
rayon = "1.7"                          # Data parallelism for scene processing
crossbeam = "0.8"                      # Lock-free data structures
parking_lot = "0.12"                   # Fast mutex and rwlock
dashmap = "5.0"                        # Concurrent HashMap for resource caching
smallvec = "1.11"                      # Stack-allocated vectors for small arrays
bumpalo = "3.14"                       # Bump allocator for temporary allocations
slotmap = "1.0"                        # Entity storage with generational indices

# SIMD optimization
wide = { version = "0.7", optional = true }                           # SIMD math operations
packed_simd = { version = "0.3", optional = true }

# Memory management
region = "3.0"                         # Memory protection and mapping
memmap2 = "0.9"                        # Memory-mapped file access

# Audio integration (for positional audio)
cpal = "0.15"                          # Cross-platform audio I/O
hound = "3.5"                          # WAV file format support

# Error handling and logging
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
game_network = { path = "../GameEngine/GameNetwork" }
game-client-rust = { path = "../GameEngine/GameClient" }
ww3d-render-2d = { path = "../Libraries/Source/WWVegas/WW3D2/crates/ww3d-render-2d" }
ww3d-renderer-3d = { path = "../Libraries/Source/WWVegas/WW3D2/crates/ww3d-renderer-3d" }
ww3d-assets = { path = "../Libraries/Source/WWVegas/WW3D2/crates/ww3d-assets" }

# Serialization for asset loading
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rmp-serde = "1.1"                      # MessagePack for fast serialization

# Async for resource streaming
tokio = { version = "1.35", features = ["rt", "fs", "io-util"], optional = true }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }

# Time management
instant = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12", 
    "Win32_Graphics_Dxgi",
    "Win32_System_LibraryLoader",
    "Win32_Foundation"
] }
winapi = { version = "0.3", features = ["d3d11", "d3d12", "dxgi"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27"
cocoa = "0.25"
core-graphics = "0.23"

[target.'cfg(unix)'.dependencies]
x11 = { version = "2.21", features = ["xlib"] }
wayland-client = "0.31"

# Utilities
once_cell = "1.19"
lazy_static = "1.4"
uuid = { version = "1.6", features = ["v4"] }
bitflags = "2.4"

[features]
default = ["async", "simd"]
async = ["tokio", "async-trait", "futures"]
simd = ["wide", "packed_simd"]
vulkan = ["wgpu/vulkan"]
dx12 = ["wgpu/dx12"]
metal = ["wgpu/metal"]
opengl = ["wgpu/gl"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio-test = "0.4"

[[bench]]
name = "graphics_benchmarks"
harness = false
