[package]
name = "integration"
version = "0.1.0"
edition = "2021"
description = "Master Integration System - Coordinates all C&C Generals Zero Hour subsystems"
license = "GPL-3.0"
authors = ["Claude Code"]
repository = "https://github.com/cnc-generals/zero-hour-rust"

[lib]
name = "integration"
path = "src/lib.rs"

[dependencies]
# Internal workspace crates - Game Engine Components
game_engine = { path = "../GameEngine/Common" }
game_client = { package = "game-client-rust", path = "../GameEngine/GameClient" }
game_logic = { package = "gamelogic", path = "../GameEngine/GameLogic" }
game_network = { path = "../GameEngine/GameNetwork" }
game_engine_device = { path = "../GameEngine/GameEngineDevice" }

# Internal workspace crates - WWVegas Libraries
wwshade_rust = { package = "wwshade", path = "../Libraries/Source/WWVegas/wwshade" }
wwlib_rust = { package = "wwlib-rust", path = "../Libraries/Source/WWVegas/WWLib" }
math_utilities = { package = "math_utilities", path = "../Libraries/Source/WWVegas/WWMath" }
wwaudio = { package = "wp-audio", path = "../Libraries/Source/WWVegas/WWAudio" }
ww3d-engine = { path = "../Libraries/Source/WWVegas/WW3D2/crates/ww3d-engine" }
wwdebug = { package = "profile", path = "../Libraries/Source/WWVegas/WWDebug" }
ww_save_load = { path = "../Libraries/Source/WWVegas/WWSaveLoad" }
wwdownload = { path = "../Libraries/Source/WWVegas/WWDownload" }

# Internal workspace crates - Base Types
base_types = { path = "../Libraries/Source/WWVegas/WWLib/base_types" }
string_system = { path = "../Libraries/Source/WWVegas/WWLib/string_system" }
memory_system = { path = "../Libraries/Source/WWVegas/WWLib/memory_system" }
ini_parser = { path = "../Libraries/Source/WWVegas/WWLib/ini_parser" }
wpaudio-shared = { path = "../Libraries/Source/WPAudio/shared" }

# Performance and optimization
rayon = "1.11"                    # Data parallelism
crossbeam = "0.8"               # Lock-free data structures  
parking_lot = "0.12"            # Fast synchronization primitives
dashmap = "5.5"                 # Concurrent HashMap
smallvec = "1.15"                # Stack-allocated vectors
bumpalo = "3.19"                 # Bump allocator for temporary allocations

# SIMD optimizations
wide = { version = "0.7", optional = true }                    # SIMD operations
packed_simd = { version = "0.3", optional = true }             # SIMD vector types

# Async runtime and futures
tokio = { version = "1.48", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }

# Error handling and logging
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Diagnostics and profiling
criterion = { version = "0.5", optional = true }
pprof = { version = "0.13", features = ["flamegraph", "protobuf-codec"], optional = true }
jemallocator = { version = "0.5", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rmp-serde = "1.3"              # MessagePack serialization

# Time and scheduling
chrono = { version = "0.4", features = ["serde"] }
instant = "0.1"

# Configuration management
config = "0.14"
toml = "0.8"

# Memory management and system
region = "3.0"                  # Memory protection
memmap2 = "0.9"                 # Memory-mapped files

# Utilities
once_cell = "1.21"
lazy_static = "1.5"
uuid = { version = "1.18", features = ["v4", "serde"] }
bitflags = "2.10"
libc = "0.2"
num_cpus = "1.16"

[features]
default = ["async"]
async = ["tokio", "async-trait", "futures"]
simd = ["wide", "packed_simd"]
profiling = ["criterion", "pprof"]
jemalloc = ["jemallocator"]
benchmarks = ["criterion"]

# Platform-specific features
# windows = ["game_engine/windows", "wwaudio/windows"]
# linux = ["game_engine/unix", "wwaudio/unix"]
# macos = ["game_engine/unix", "wwaudio/unix"]

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.9"                # Property-based testing


# [[bench]]
# name = "integration_benchmarks"
# harness = false
# required-features = ["benchmarks"]
# 
# [[bench]]
# name = "performance_benchmarks"
# harness = false
# required-features = ["benchmarks"]
# 
# [[bench]]
# name = "memory_benchmarks"
# harness = false
# required-features = ["benchmarks"]
