[package]
name = "experimental-editor-gpui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
gpui = "0.2.2"
image = { workspace = true, features = ["png", "jpeg", "tga", "bmp", "dds"] }
log.workspace = true
experimental-engine-core = { path = "../engine_core" }
gpui-gui = { path = "../../GameEngine/GameClient/gui" }
