[package]
name = "game_engine"
version = "0.1.0"
edition = "2021"


[dependencies]
# Common dependencies for game engine functionality
libc = "0.2"
bitflags = "2.10"
bit-vec = "0.6"
once_cell = "1.21"
ahash = "0.8"
lazy_static = "1.5"
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
uuid = "1.18"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12"
log = "0.4"
memmap2 = "0.9"
crossbeam = "0.8"
parking_lot = { workspace = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["registry"] }
flate2 = "1.1"
tempfile = "3.23"
directories = "5.0"
serde_json = "1.0"

# Random number generation
rand = { workspace = true }
fastrand = "2.3"

# Async runtime and futures
tokio = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
futures = { version = "0.3", optional = true }

# Modern audio libraries for high-quality audio system
rodio = { version = "0.17", features = ["symphonia", "wav"] }
cpal = { version = "0.15", optional = true }
symphonia = { version = "0.5", features = ["all"], optional = true }
# hound = { version = "3.5", optional = true }  # Now required
realfft = { version = "3.5", optional = true }
rubato = { version = "0.14", optional = true }
fundsp = { version = "0.17", optional = true }
rtrb = { version = "0.2", optional = true }
# Required dependencies for audio system
crossbeam-channel = "0.5"
hound = "3.5"
lewton = "0.10"
minimp3 = "0.5"

# 3D audio and spatial processing
# spatial-audio = { version = "0.3", optional = true }  # Not available
# hrtf = { version = "0.8", optional = true }            # Not available

# Advanced collections and utilities
indexmap = "2.12"
smallvec = "1.15"
dashmap = "5.5"
rayon = "1.11"

# Memory management
bumpalo = "3.19"
region = "3.0"

# System information
num_cpus = "1.17"

# String processing
encoding_rs = "0.8"
unicode-normalization = "0.1"

# Compression
lz4 = { version = "1.28", optional = true }
zstd = { version = "0.13", optional = true }
crc32fast = "1.5"

ww3d-animation = { path = "../../Libraries/Source/WWVegas/WW3D2/crates/ww3d-animation" }
ww3d-core = { path = "../../Libraries/Source/WWVegas/WW3D2/crates/ww3d-core" }
glam = { workspace = true }

# System interaction
winapi = { version = "0.3", features = ["winuser", "winreg", "processthreadsapi", "handleapi", "errhandlingapi", "minwinbase", "winbase", "winnt"], optional = true }
nix = { version = "0.26", optional = true }
sysinfo = { workspace = true, optional = true }

# Graphics system (optional for fallback)
wgpu = { version = "27.0.1", optional = true }
winit = { version = "0.29", optional = true }


[features]
default = ["async", "graphics"]
async = ["tokio", "async-trait", "futures"]
audio = ["cpal", "symphonia", "realfft", "rubato", "fundsp", "rtrb"]
compression = ["lz4", "zstd"]
graphics = ["wgpu", "winit"]
windows = ["winapi"]
unix = ["nix"]
sysinfo = ["dep:sysinfo"]
notify = []
legacy-files = []
test-assets = []
internal = []
allow_anim_inquiries = []
load_test_assets = []
allow_surrender = []
logging = []
backtrace = []
debug_crc = ["tracing", "tracing-subscriber"]
debug = []
perf_timers = []
no_perf_timers = []
deterministic = []

[lib]
name = "game_engine"
path = "src/lib.rs"
test = false

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
